<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/bai"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="right"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="45dp">
            <ImageButton
                android:tint="@color/hei"
                android:layout_gravity="center"
                android:id="@+id/cuo"
                android:background="?android:attr/selectableItemBackground"
                android:padding="15dp"
                android:scaleType="centerInside"
                android:src="@drawable/cuo"
                android:layout_width="45dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/view"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <ImageView
            android:src="@mipmap/gao"
            android:layout_width="100dp"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/hei"
                android:textSize="25dp"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/m_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:imeOptions=""
            android:id="@+id/user"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/bkuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/pass"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="@drawable/bkuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:id="@+id/dr"
        android:background="@drawable/button_circle_shape"
        android:layout_margin="10dp"
        android:text="@string/dr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/qqdr"
            android:background="@drawable/button_circle_shape"
            android:layout_margin="10dp"
            android:text="QQ登入"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/wj"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <View
            android:background="@color/hei"
            android:layout_width="1dp"
            android:layout_height="20dp"/>
        <TextView
            android:background="?attr/selectableItemBackground"
            android:id="@+id/qq"
            android:layout_margin="10dp"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:text="@string/QQ"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</LinearLayout>
</LinearLayout>