<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@color/tmbai"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/gao"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="right"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="45dp">
                <ImageButton
                    android:layout_gravity="center"
                    android:id="@+id/cuo"
                    android:background="?android:attr/selectableItemBackgroundBorderless"
                    android:padding="15dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/cuo"
                    android:layout_width="45dp"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:elevation="3dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/tmbai"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/view"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="90dp">
                <ImageView
                    android:scaleType="centerInside"
                    android:src="@drawable/qingyue"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"/>
                <LinearLayout
                    android:padding="10dp"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="25dp"
                        android:text="@string/app_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textSize="10dp"
                        android:text="让生活多一点乐趣"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ListView
                    android:listSelector="@color/transparent"
                    android:dividerHeight="5dp"
                    android:divider="@null"
                    android:scrollbars="none"
                    android:id="@+id/Listview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:padding="5dp"
            android:theme="@style/RippleWhite"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.googd.View.Switch
                android:id="@+id/x"
                android:gravity="center"
                android:layout_gravity="bottom"
                app:image_weight="20dp"
                app:image_height="30dp"
                android:text="@string/sz"
                android:src="@drawable/sz"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingPrefix" />
            <android.googd.View.Switch
                android:id="@+id/theme"
                android:gravity="center"
                android:layout_gravity="bottom"
                app:image_weight="20dp"
                app:image_height="30dp"
                android:text="@string/ye"
                android:src="@drawable/ye"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingPrefix" />
            <android.googd.View.Switch
                android:id="@+id/tui"
                android:gravity="center"
                android:layout_gravity="bottom"
                app:image_weight="20dp"
                app:image_height="30dp"
                android:text="@string/tuic"
                android:src="@drawable/tuic"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                tools:ignore="MissingPrefix" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>