<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="bottom"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/ycccccccc"
    android:background="@color/tmbai"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.googd.View.Switch
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/yl"
            android:layout_weight="1"
            android:textSize="3dp"
            app:image_weight="20dp"
            app:image_height="30dp"
            android:gravity="center"
            android:text="@string/log"
            android:src="@mipmap/ljie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingPrefix" />
        <android.googd.View.Switch
            app:image_weight="20dp"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/webvieww"
            android:layout_weight="1"
            app:image_height="30dp"
            android:textSize="3dp"
            android:gravity="center"
            android:text="@string/x5"
            android:src="@mipmap/llq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingPrefix" />
        <android.googd.View.Switch
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:textSize="3dp"
            app:image_weight="20dp"
            app:image_height="30dp"
            android:gravity="center"
            android:text="@string/zti"
            android:src="@mipmap/sc"
            android:id="@+id/shangchu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <android.googd.View.Switch
            app:image_weight="20dp"
            android:id="@+id/ippp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:textSize="3dp"
            app:image_height="30dp"
            android:gravity="center"
            android:text="@string/ipdl"
            android:src="@mipmap/wl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingPrefix" />
        <android.googd.View.Switch
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/zdyip"
            app:image_height="30dp"
            app:image_weight="20dp"
            android:layout_weight="1"
            android:textSize="3dp"
            android:gravity="center"
            android:text="自定义IP"
            android:src="@mipmap/sz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingPrefix" />
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.googd.View.Switch
            app:image_height="30dp"
            app:image_weight="25dp"
            android:id="@+id/qdooo"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:textSize="3dp"
            android:gravity="center"
            android:text="删除数据"
            android:src="@mipmap/schu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingPrefix" />
        <android.googd.View.Switch
            android:id="@+id/zdyua"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:textSize="3dp"
            app:image_height="30dp"
            app:image_weight="20dp"
            android:gravity="center"
            android:text="自定义UA"
            android:src="@mipmap/qdollq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingPrefix" />
        <android.googd.View.Switch
            app:image_height="30dp"
            app:image_weight="50dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:textSize="3dp"
            android:gravity="center"
            android:text="开启滑动"
            android:id="@+id/huado"
            android:src="@mipmap/huadod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingPrefix" />
        <android.googd.View.Switch
            app:image_height="30dp"
            app:image_weight="30dp"
            android:id="@+id/fztext"
            android:background="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            android:textSize="3dp"
            android:gravity="center"
            android:text="复制加载链接"
            android:src="@mipmap/bu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingPrefix" />
        <android.googd.View.Switch
            app:image_weight="20dp"
            app:image_height="30dp"
            android:background="?android:attr/selectableItemBackground"
            android:id="@+id/qun"
            android:layout_weight="1"
            android:textSize="3dp"
            android:gravity="center"
            android:text="开启阅读"
            android:src="@mipmap/meiyun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingPrefix" />
    </LinearLayout>
</LinearLayout>

<LinearLayout
    android:padding="10dp"
    android:orientation="horizontal"
    android:layout_gravity="end"
    android:gravity="end"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <ImageButton
        android:id="@+id/gbi"
        android:layout_weight="2"
        android:background="?android:attr/selectableItemBackground"
        android:scaleType="centerInside"
        android:padding="5dp"
        android:src="@mipmap/aa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ImageButton
        android:layout_weight="2"
        android:id="@+id/dibu_GNNE"
        android:background="?android:attr/selectableItemBackground"
        android:scaleType="centerInside"
        android:padding="5dp"
        android:rotation="270"
        android:src="@mipmap/a7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
</LinearLayout>